Fix mobile table of contents clipping

--- a/themes/pickles/assets/scss/object/project/p-article.scss
+++ b/themes/pickles/assets/scss/object/project/p-article.scss
@@ -268,6 +268,31 @@
     }
   }
 
+  @include breakpoint.mq-down(md) {
+    padding: 14px 16px;
+
+    > .tableOfContentContainer__body {
+      overflow-x: hidden;
+    }
+
+    ul li {
+      margin: 8px 0;
+
+      a {
+        min-height: 40px;
+        padding: 9px 10px;
+        margin: 0;
+        border-left: 0;
+      }
+
+      ul {
+        margin-left: 10px;
+        padding-left: 10px;
+        border-left: 1px solid var(--color-divider);
+      }
+    }
+  }
+
   // Active state for scroll spy
   a.active {
     color: var(--color-accent) !important;
